# blog_src

./: .gitignore  Makefile  archives.html  authors.html  categories.html  debian-mips-qemu.html  index.html  intellij-vim.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  script-for-standalone-gh.sh  search.html  sicp.html  sitemap.xml  sni.html  tags.html  tipuesearch_content.js  vbox-srv.html
.netlify/: state.json
.well-known/pki-validation/: 23F9F6F2274B1595F58915F6582CB534.txt  E10CE96950B2B58E3985DE1968B921EB.txt
author/: samidhya-sarker.html
category/: computing.html
content/pages/: landing-page-about-me.md
content/posts/: qemu-mips-debian.markdown  sni.markdown  vim-intellij.markdown  virtualbox-server.markdown
drafts/: altair.html  debian-mips-qemu.html  test1.html
output/: archives.html  categories.html  search.html  tags.html  vbox-srv.html
pages/: cv.html  landing-page-about-hidden.html  my-super-title-cv.html  my-super-title.html
scripts/: publish_to_github_pages.sh
tag/: algorithm.html  programming.html
themes/elegant/: package.json
