[tool.poetry]
name = "blog-src"
version = "0.1.0"
description = ""
authors = ["desertsniper87 <torshobuet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.3"
markdown = "^3.6"
markupsafe = "^2.1.5"
pygments = "^2.17.2"
unidecode = "^1.3.8"
beautifulsoup4 = "^4.12.3"
blinker = "^1.7.0"
colorama = "^0.4.6"
commonmark = "^0.9.1"
docutils = "^0.21.2"
feedgenerator = "^2.1.0"
ghp-import = "^2.1.0"
pelican-sitemap = "^1.1.0"
pelican = "^4.9.1"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
rich = "^13.7.1"
sitemap = "^20191121"
six = "^1.16.0"
soupsieve = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
